# test123

./: CHANGELOG.md  release-please-config.json  test.txt
.github/workflows/: docs.yml  pipeline_pr.yml  pipeline_release.yml  release-please.yml
template/: pyproject.toml
template/{{package_name}}/: __init__.py.jinja
